# Zero-Latency-Recall

./: .env.example  .gitignore  README.md  benchmark.py  cli.py  db_dump.txt  debug_logger.py  dump_db_to_text.py  extract.py  extract_new.py  extract_path_check.py  hello.py  log_solution_summary.md  pyproject.toml  pytest.ini  requirements.txt  search.py  show_extracted_text.py  test_results.json  zlr_watch.py
extract/: __init__.py  __main__.py  config.py  obsidian_export.py  tags_JP.yaml
extract/core/: extractor.py  strategies.py
extract/db/: repo.py
extractor/: __init__.py  advanced.py  advanced_stub.py  base.py  simple.py
src/: search.py  zlr.py  zlr_doctor.py  zlr_watch.py
src/extract/: config.py
src/extract/core/: utils.py
src/extract/db/: repo.py
tests/: conftest.py  test_accuracy.py  test_extraction_quality.py  test_patent_extract.py
tests/ground_truth/: .gitkeep  02_multi-column.txt  04_multi-column.txt  06_multi-column_magazine-style.txt
